--- a/assets/game.css
+++ b/assets/game.css
@@ -49,3 +49,15 @@
 .hud-main-text {
     align-items: center;
 }
+
+#progressBar {
+    width: 20rem;
+    height: 4rem;
+    border: 0.3rem solid #333;
+}
+
+#progressBarFull {
+    height: 3.4rem;
+    background-color: #333;
+    width: 0%;
+}
